# CPU-Simulator

./: .gitignore  CMakeLists.txt  README.md
Tomasulo/: main.cpp
Tomasulo/include/: ArithmeticLogicUnit.hpp  CPU.hpp  Classes.hpp  Decoder.hpp  Exception.hpp  LoadStoreBuffer.hpp  Memory.hpp  Predictor.hpp  ProgramCounter.hpp  RegisterFile.hpp  ReorderBuffer.hpp  ReservationStation.hpp
Tomasulo/src/: ArithmeticLogicUnit.cpp  CPU.cpp  Class.cpp  Decoder.cpp  LoadStoreBuffer.cpp  Memory.cpp  ProgramCounter.cpp  RegisterFile.cpp  ReorderBuffer.cpp  ReservationStation.cpp
fiveStagePipeline/include/: ArithmeticLogicUnit.hpp  CPU.hpp  Decoder.hpp  LoadData.hpp  LoadStoreBuffer.hpp  Memory.hpp  Predictor.hpp  ProgramCounter.hpp  RegisterFile.hpp  ReorderBuffer.hpp  ReservationStation.hpp
fiveStagePipeline/src/: ArithmeticLogicUnit.cpp  CPU.cpp  Decoder.cpp  LoadData.cpp  LoadStoreBuffer.cpp  Memory.cpp  Predictor.cpp  ProgramCounter.cpp  RegisterFile.cpp  ReorderBuffer.cpp  ReservationStation.cpp
singleStagePipeline/: main.cpp
singleStagePipeline/include/: ArithmeticLogicUnit.hpp  BranchComparation.hpp  InstructionDecoder.hpp  InstructionMemory.hpp  LoadData.hpp  Memory.hpp  ProgramCounter.hpp  RegFile.hpp  Run.hpp
singleStagePipeline/src/: ArithmeticLogicUnit.cpp  BranchComparation.cpp  InstructionDecoder.cpp  InstructionMemory.cpp  LoadData.cpp  Memory.cpp  ProgramCounter.cpp  RegFile.cpp  Run.cpp
